# fx-led-display

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
batch-processing/: docker-compose.yml
batch-processing/output/: 300_currency_couples.csv  currency_rates.csv
batch-processing/sql/: 01_init.sql  02_currency_rate_update_hourly.sql  03_currency_update_job_300_currencies.sql  04_currency_rate_update_hourly_to_table.sql  05_currency_rate_optimised.sql
event_processing/: Dockerfile  flask_app.py  requirements.txt
event_processing/etc/: get_current_sql_data.py  kafka_consumer.py  kafka_producer.py
stream-processing/: Dockerfile  docker-compose.yml  flask_app.py
stream-processing/etc/: sql_connection.py
stream_processing/: .env  flask_app.py
stream_processing/etc/: get_current_sql_data.py  kafka_consumer.py  kafka_producer.py  sql_connection.py
