[tool.poetry]
name = "FX Taks"
version = "0.1.0"
description = "Real-Time FX Display: Currency Exchange Rates and Daily Change Indicator"
authors = ["RatneshKumar Pandey"]
repository = "https://github.com/Ratneshkpandey3/fx-led-display"

[tool.poetry.dependencies]
python = "3.9.13"
PyYAML = "6.0.2"
kafka-python = "2.0.2"
flask = "3.0.3"
mysql-connector-python = "9.0.0"

[tool.poetry.dev-dependencies]
pre-commit = ">=2.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^24.3.0"
mkdocs = ">=1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
